styles.css
:root {
  --mountBattenPink: #98798e;
  --silverPink: #c5aeab;
  --dustStorm: #e9cfcc;
  --pinkLavender: #d9b9c7;
  --paleChestnut: #d9aaba;
}

@keyframes transitionIn {
  from {
    opacity: 0;
    transform: translateY(-10px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes deleteTransition {
  from {
    opacity: 100;
  }

  to {
    opacity: 0;
    transform: translateX(10px);
  }
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Ubuntu", sans-serif;
}

.main {
  margin: 20px 10px 0 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

h3 {
  font-size: 1rem;
}
input,
button {
  appearance: none;
  border: none;
  outline: none;
  background: none;
  cursor: pointer;
}
#entry {
  border: 1px solid black;
}
button {
  border: 0.5px solid black;
  padding: 5px 9px;
  border-radius: 5px;
}

html, body {
  max-width: 100%;
  overflow-x: hidden;
}

body {
  animation: transitionIn 0.75s;
  background-color: var(--silverPink);
}
.title {
  padding-bottom: 1.5rem;
}
#call-action,
#prompt {
  padding-bottom: 0.5rem;
}
.entry-list {
  padding-top: 1.5rem;
  width: 343px;
  margin-left: -17px;
}
.item-entry {
  margin-bottom: 3rem;
  background-color: rgba(255, 255, 255,.5);
  border-radius: 5px;
  transition: opacity .5s;
}

#entry-list-title {
  margin-bottom: 1.5rem;
}
.add-prompt-button {
  float: right;
  position: -webkit-sticky;
  position: sticky;
  bottom: 10px;
  margin-right: 30px;
  background-color: var(--paleChestnut);
  margin-bottom: 10px;
}

.date,
.prompt-title,
.answer {
  padding-top: .5rem;
  margin-bottom: 0.5rem;
}
#call-action {
  display: flex;
  justify-content: center;
}

.answer {
  appearance: none;
  border: none;
  outline: none;
  background: none;
  resize: none;
}
.entry-card, .actions{
  margin: 1rem;
}

.actions{
  padding-bottom: 1rem;
}
.edit{
  margin-right: .6rem;
}

.submit-button:hover:enabled,
.edit:hover:enabled,
.delete:hover:enabled,
#change-prompt:hover:enabled,
.add-prompt-button:hover:enabled {
  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
  transform: translateY(-0.25em);
}

.entry-box{
  margin-bottom: 26.16px;
}

#prompt{
  text-align: center;
}

